infrastructure/kubernetes/pv.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amrit-rasoi
