infrastructure/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
  namespace: amrit-rasoi
spec:
  selector:
    app: backend-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: amrit-rasoi
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: amrit-rasoi
spec:
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
